# rabbitmq-delayed-message-exchange

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  app.bzl  erlang_ls.config  helpers.bzl  moduleindex.yaml  package.mk  rabbitmq-components.mk  user-template.bazelrc
.github/workflows/: nightly.yml  release.yml  test.yml
etc/: rabbit-hare.config
src/: rabbit_delayed_message.erl  rabbit_delayed_message_app.erl  rabbit_delayed_message_khepri.erl  rabbit_delayed_message_kv_store.erl  rabbit_delayed_message_machine.erl  rabbit_delayed_message_sup.erl  rabbit_delayed_message_utils.erl  rabbit_delayed_stream_handler.erl  rabbit_delayed_stream_reader.erl  rabbit_exchange_type_delayed_message.erl  rabbitmq_delayed_message_exchange.app.src
test/: plugin_SUITE.erl
test/src/: rabbit_exchange_type_delayed_message_test.erl  rabbit_exchange_type_delayed_message_test_util.erl
